use fluid container // whitespace fixes

--- a/app/assets/stylesheets/styles/layout.scss
+++ b/app/assets/stylesheets/styles/layout.scss
@@ -25,7 +25,7 @@ main{
     justify-content: center;
     align-items: center;
     background-position: center center;
-    .container {
+    .container-fluid {
       width: 100%;
     }
     img{
@@ -64,6 +64,10 @@ main{
   li a{
     color: $brand-info;
   }
+}
+
+.container-fluid {
+  max-width: 1250px;
 }
 
 // Awesome Print
