--- a/app/assets/stylesheets/styles/login.scss
+++ b/app/assets/stylesheets/styles/login.scss
@@ -1,9 +1,9 @@
 .title-wrap {
-    text-align: center;
+  text-align: center;
 }
 
-.container.login {
-    padding-top: 25px;
+.container-fluid.login {
+  padding-top: 25px;
 }
 
 .omniauth-links{
